RESOLVED FIXED197635
ASSERT at WebKit::NetworkCache::makeSafeToUseMemoryMapForPath under Storage::StoreBodyAsBlob when running WebDriver tests
https://bugs.webkit.org/show_bug.cgi?id=197635
Summary ASSERT at WebKit::NetworkCache::makeSafeToUseMemoryMapForPath under Storage::...
Chris Dumez
Reported 2019-05-06 16:20:11 PDT
ASSERT at WebKit::NetworkCache::makeSafeToUseMemoryMapForPath under Storage::StoreBodyAsBlob when running WebDriver tests: #0 0x000000010ea0e45c in ::WTFCrash() at Source/WTF/wtf/Assertions.cpp:305 #1 0x0000000102c8e36c in WTFCrashWithInfo(int, char const*, char const*, int) at WebKitBuild/Debug-iphoneos/usr/local/include/wtf/Assertions.h:568 #2 0x0000000102f45424 in WebKit::NetworkCache::makeSafeToUseMemoryMapForPath(WTF::String const&) at Source/WebKit/NetworkProcess/cache/NetworkCacheFileSystemCocoa.mm:58 #3 0x000000010323ec00 in WebKit::NetworkCache::BlobStorage::add(WTF::String const&, WebKit::NetworkCache::Data const&) at Source/WebKit/NetworkProcess/cache/NetworkCacheBlobStorage.cpp:97
Attachments
Patch (2.53 KB, patch)
2019-05-06 16:23 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-05-06 16:20:28 PDT
Chris Dumez
Comment 2 2019-05-06 16:23:03 PDT
Geoffrey Garen
Comment 3 2019-05-06 16:49:35 PDT
Comment on attachment 369195 [details] Patch r=me
WebKit Commit Bot
Comment 4 2019-05-06 17:42:49 PDT
Comment on attachment 369195 [details] Patch Clearing flags on attachment: 369195 Committed r244997: <https://trac.webkit.org/changeset/244997>
WebKit Commit Bot
Comment 5 2019-05-06 17:42:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.