ASSERT at WebKit::NetworkCache::makeSafeToUseMemoryMapForPath under Storage::StoreBodyAsBlob when running WebDriver tests https://bugs.webkit.org/show_bug.cgi?id=197635 <rdar://problem/50473149>

Reviewed by Geoffrey Garen.

We need to make sure the the path at blobPathString exists before calling FileSystem::makeSafeToUseMemoryMapForPath().
If the blob does not already exist when BlobStorage::add() is called, what will create it is the call to Data::mapToFile().

* NetworkProcess/cache/NetworkCacheBlobStorage.cpp:
(WebKit::NetworkCache::BlobStorage::add):


Canonical link: https://commits.webkit.org/211780@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244997 268f45cc-cd09-0410-ab3c-d52691b4dbfc